--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,51 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="no-sidebar is-preload">
+    <!-- Header -->
+				<div id="header">
+
+					<!-- Inner -->
+						<div class="inner">
+							<header>
+								<h1><a href="index.html" id="logo">Helios</a></h1>
+							</header>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<ul>
+								<li><%= link_to "Home", root_path%></li>
+								<li><%= link_to "Dropdown", pages_test_path%></li>
+								<li><%= link_to "Left Sidebar", users_login_path%></li>
+								<li><%= link_to "Right Sidebar", pages_about_us_path%></li>
+                <li><a href="#">No Sidebar</a></li>
+							</ul>
+						</nav>
+
+				</div>
     <%= yield %>
+    <!-- Footer -->
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+
+						</div>
+						<hr />
+						<div class="row">
+							<div class="col-12">
+
+								<!-- Copyright -->
+									<div class="copyright">
+										<ul class="menu">
+											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										</ul>
+									</div>
+
+							</div>
+
+						</div>
+					</div>
+				</div>
   </body>
 </html>
